# dlthub-ai-workbench

./: .claude  .gitignore  .mcp.json  CLAUDE.md  EVALS.md  LEARNINGS.md  LICENSE  Makefile  README.md  README_NEW.md  TOOLKITS.md  anthropic_admin_explore.py  dump_session.py  luma_events.md  luma_events_pipeline.py  main.py  pyproject.toml  rest_api_pipeline.py  rick_and_morty_api.md  rick_and_morty_api_pipeline.py  rick_and_morty_pipeline.duckdb  rick_and_morty_pipeline.py  session_dump.txt
.claude/: settings.json  settings.local.json
.claude-plugin/: .claude  marketplace.json
.claude/commands/: setup-auth.md  write-pipeline.md
.claude/skills/create-eval/: SKILL.md
.claude/skills/rename-component/: SKILL.md
.claude/skills/rename-content/: SKILL.md
.claude/skills/run-eval/: SKILL.md
.claude/skills/validate-toolkits/: SKILL.md
.dlt/: config.toml
.github/workflows/: lint.yml
.ontology/: README.md
.schema/: hubspot_crm_data.ison  ontology.jsonld
ai/_global/: README.md
ai/_init/: README.md
ai/rest-api-pipeline/: settings.local.json
projects/ricknmorty/: rest_api_pipeline.py
rick/: dump_session.py  opena_ai_usage.md  opena_ai_usage.py  rest_api_pipeline.py  rick_and_morty_explore.py  session_dump.md
rick-and-morty-pipeline/: SPEC.md  WHY.md  pyproject.toml  rest_api_pipeline.py
tools/: create_eval_workspace.py  dump_session.py  extract_refs.py  lint_install.py  list_skill_descriptions.py  run_trigger_eval.py  validate_plugins.py  validate_toolkits.py
workbench/_init/: .mcp.json  README.md
workbench/init/: .mcp.json  AGENTS.md  README.md
(+96 files in other folders)
