[project]
name = "dlthub-ai-workbench"
version = "0.1.0"
description = "AI toolkits for data engineering with dlt"
requires-python = ">=3.11"
dependencies = [
    "dlt[hub,workspace]>=1.23.0",
]

[dependency-groups]
lint = [
  "ruff>=0.2.1",
  "mypy>=1.8.0",
]

# [tool.uv.sources]
# dlt = { git = "https://github.com/dlt-hub/dlt", branch = "feat/ai-workbench-support" }

[tool.ruff]
preview = true
line-length = 100

[tool.ruff.lint]
explicit-preview-rules = true
select = ["F", "E", "W", "T", "PLW1514"]

[tool.ruff.lint.extend-per-file-ignores]
"**" = ["E402"]
"tools/**" = ["T201"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = false
strict_optional = false
warn_redundant_casts = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "dlt.*"
ignore_missing_imports = true